# job-agent

./: .env.example  .gitignore  README.md  companies.yaml  pyproject.toml
docs/: index.html
job_agent/: __init__.py  cli.py  companies.py  config.py  db.py  digest.py  discovery.py  drafting.py  drive.py  models.py  notify.py  oauth.py  queries.py  schema.sql  server.py  store.py  textutil.py  tiers.py  website.py
job_agent/reasoning/: __init__.py  llm.py  master_profile.py  profile.py  scoring.py
job_agent/sources/: __init__.py  adzuna.py  ats.py  ats_sources.py  base.py  location.py  resolver.py  watchlist.py
scripts/: com.jobagent.run.plist  com.jobagent.serve.plist  rescore.py  rescore_a1.py  rescore_core.py  run_scheduled.sh
tests/: test_adzuna.py  test_ats_sources.py  test_companies.py  test_digest.py  test_discovery.py  test_drafting.py  test_feedback.py  test_location.py  test_master_profile.py  test_new_sources.py  test_notify.py  test_oauth.py  test_profile.py  test_resolver.py  test_scoring.py  test_seen_state.py  test_server.py  test_watchlist.py  test_website.py
