[project]
name = "job-agent"
version = "0.1.0"
description = "Personal job-discovery agent: fetch listings, score fit with Claude, write a ranked digest."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.69",                  # reasoning layer transport (Messages API)
    "requests>=2.31",                   # data layer HTTP
    "pypdf>=4.0",                       # resume / Drive PDF text extraction
    "pyyaml>=6.0",                      # companies.yaml watchlist
    "google-api-python-client>=2.0",    # Drive API: master profile from Drive materials
    "google-auth>=2.0",                 # service-account auth for Drive (read-only)
    "python-docx>=1.1",                 # editable .docx resume + cover-letter drafts
    # "claude-agent-sdk>=0.2.0",        # retired: replaced by the raw Anthropic API for speed
]

[project.scripts]
job-agent = "job_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["job_agent"]
